--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -21,6 +21,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="type course here"
+        android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/pro_save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
