--- a/app/src/main/res/layout/meetingpopup.xml
+++ b/app/src/main/res/layout/meetingpopup.xml
@@ -52,6 +52,13 @@
             android:gravity="center"
             android:text="TextView" />
 
+        <TextView
+        android:id="@+id/txtNextDate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="TextView" />
+
         <Button
             android:id="@+id/btnBeitreten"
             android:layout_width="match_parent"
