--- a/app/src/main/res/layout/activity_group_overview.xml
+++ b/app/src/main/res/layout/activity_group_overview.xml
@@ -6,4 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".GroupOverviewActivity">
 
+
+    <erkewesa.org.findnlearn.views.testView
+        android:id="@+id/testView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.372">
+
+
+    </erkewesa.org.findnlearn.views.testView>
+
+
 </android.support.constraint.ConstraintLayout>
