--- a/app/src/main/res/layout/activity_overview.xml
+++ b/app/src/main/res/layout/activity_overview.xml
@@ -9,21 +9,6 @@
 
     tools:layout_editor_absoluteY="81dp">
 
-    <TextView
-        android:id="@+id/tvBoxTitel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:text="TextView"
-        android:textSize="18sp"
-        android:textColor="@color/colorAccent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView5"
@@ -31,10 +16,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvBoxTitel" />
+        tools:layout_editor_absoluteY="82dp" />
 
     <TextView
         android:id="@+id/textView6"
@@ -42,24 +26,22 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvBoxTitel" />
+        tools:layout_editor_absoluteY="82dp" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvBoxTitel" />
+        tools:layout_editor_absoluteY="82dp" />
 
     <TextView
         android:id="@+id/tvBoxDatum"
@@ -117,13 +99,29 @@
     <LinearLayout
         android:id="@+id/header"
         android:layout_width="240dp"
-        android:layout_height="58dp"
+        android:layout_height="73dp"
         android:layout_marginBottom="10dp"
         android:background="#045047"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/tvBoxTitel"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></LinearLayout>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.036"
+        android:gravity="center">
+
+        <TextView
+            android:id="@+id/tvBoxTitel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textColor="@color/colorAccent"
+            android:textSize="18sp"
+            tools:layout_editor_absoluteX="74dp"
+            tools:layout_editor_absoluteY="16dp"
+            />
+    </LinearLayout>
+
 
 </android.support.constraint.ConstraintLayout>
