--- a/app/src/main/res/layout/activity_overview.xml
+++ b/app/src/main/res/layout/activity_overview.xml
@@ -85,20 +85,7 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:text="zusagen" />
 
-    <!--<LinearLayout
-        android:id="@+id/header"
-        android:layout_width="240dp"
-        android:layout_height="73dp"
-        android:layout_marginBottom="10dp"
-        android:background="#045047"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/tvBoxTitel"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.036"
-        android:gravity="center"> -->
+
 
     <TextView
         android:id="@+id/tvDatum"
@@ -126,7 +113,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvVon" />
-    <!-- </LinearLayout> -->
+
+    <TextView
+        android:id="@+id/tvClick"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="3dp"
+        android:text=">"
+        android:gravity="center_horizontal"
+        android:textColor="@color/colorAccent"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toBottomOf="@+id/tvDatum"
+        app:layout_constraintEnd_toEndOf="@+id/tvDatum"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
