--- a/app/src/main/res/layout/activity_create_termin.xml
+++ b/app/src/main/res/layout/activity_create_termin.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/common_google_signin_btn_text_light_pressed"
     tools:context=".CreateTerminActivity">
 
     <TextView
@@ -68,6 +69,7 @@
         android:layout_marginRight="280dp"
         android:layout_marginBottom="8dp"
         android:text="Beschreibung:"
+        android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/edTerminBeschreibung"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,9 +83,11 @@
         android:layout_marginEnd="152dp"
         android:layout_marginRight="152dp"
         android:layout_marginBottom="29dp"
+        android:background="@color/colorPrimary"
         android:ems="10"
         android:hint="Beschreibung"
         android:inputType="textPersonName"
+        android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/crt_tv_date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -100,7 +104,9 @@
         android:layout_marginEnd="169dp"
         android:layout_marginRight="169dp"
         android:layout_marginBottom="187dp"
+        android:background="@color/colorPrimary"
         android:text="Save"
+        android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
