--- a/app/src/main/res/layout/activity_create_termin.xml
+++ b/app/src/main/res/layout/activity_create_termin.xml
@@ -17,6 +17,7 @@
         android:layout_marginEnd="153dp"
         android:layout_marginRight="153dp"
         android:layout_marginBottom="6dp"
+        android:background="@color/colorPrimary"
         android:text="select a date here"
         android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/crt_tv_timeb"
@@ -34,6 +35,7 @@
         android:layout_marginEnd="11dp"
         android:layout_marginRight="11dp"
         android:layout_marginBottom="11dp"
+        android:background="@color/colorPrimary"
         android:text="select begin time"
         android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/crt_save"
@@ -51,6 +53,7 @@
         android:layout_marginEnd="91dp"
         android:layout_marginRight="91dp"
         android:layout_marginBottom="3dp"
+        android:background="@color/colorPrimary"
         android:text="select end time"
         android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/crt_save"
