Background Picker und Beschreibung Create

--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -17,6 +17,7 @@
         android:layout_marginEnd="71dp"
         android:layout_marginRight="71dp"
         android:layout_marginBottom="31dp"
+        android:background="@color/colorPrimary"
         android:text="select end time"
         android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/cr_create"
@@ -35,6 +36,7 @@
         android:layout_marginEnd="11dp"
         android:layout_marginRight="11dp"
         android:layout_marginBottom="107dp"
+        android:background="@color/colorPrimary"
         android:text="select begin time"
         android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/cr_popup"
@@ -218,6 +220,7 @@
         android:layout_marginEnd="82dp"
         android:layout_marginRight="82dp"
         android:layout_marginBottom="80dp"
+        android:background="@color/colorPrimary"
         android:text="select a date here"
         android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/cr_create"
